--- a/JavaScriptCode/Menu.html
+++ b/JavaScriptCode/Menu.html
@@ -139,7 +139,7 @@
         <div class="row py-lg-5">
             <div class="col-lg-6 col-md-8 mx-auto">
                 <h1 class="fw-light">Progetto Pinella</h1>
-                <img src="/JavaScriptCode/immagini/PinellaLogo.png" alt="Logo del progetto"width="300" height="300">
+                <img src="immagini/PinellaLogo.png" alt="Logo del progetto"width="300" height="300">
                 <p class="lead text-body-secondary">Un modo di giocare a carte senza mazzo.</p>
                 <p class="lead text-body-tertiary">Seleziona un gioco per iniziare.</p>
             </div>
