--- a/JavaScriptCode/Pinella/Home.html
+++ b/JavaScriptCode/Pinella/Home.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="it">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,6 +8,10 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <div class="container">
+        <div class="tavolo">
+
+        </div>
+    </div>
 </body>
 </html>
