--- a/JavaScriptCode/Menu.html
+++ b/JavaScriptCode/Menu.html
@@ -142,7 +142,7 @@
                             <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
                             <div class="d-flex justify-content-between align-items-center">
                                 <div class="btn-group">
-                                    <button type="button" class="btn btn-sm btn-outline-secondary"><a href="Pinella/Home.html">Regole</a></button>
+                                    <button type="button" class="btn btn-sm btn-outline-secondary"><a href="Pinella/Home.html">Gioca</a></button>
                                 </div>
                                 <small class="text-body-secondary">2-4 giocatori</small>
                             </div>
