--- a/JavaScriptCode/Menu.html
+++ b/JavaScriptCode/Menu.html
@@ -143,6 +143,7 @@
                             <div class="d-flex justify-content-between align-items-center">
                                 <div class="btn-group">
                                     <button type="button" class="btn btn-sm btn-outline-secondary"><a href="Pinella/Home.html">Gioca</a></button>
+                                    <button type="button" class="btn btn-sm btn-outline-secondary">Regole</button>
                                 </div>
                                 <small class="text-body-secondary">2-4 giocatori</small>
                             </div>
@@ -156,6 +157,7 @@
                             <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
                             <div class="d-flex justify-content-between align-items-center">
                                 <div class="btn-group">
+                                    <button type="button" class="btn btn-sm btn-outline-secondary">Gioca</button>
                                     <button type="button" class="btn btn-sm btn-outline-secondary">Regole</button>
                                 </div>
                                 <small class="text-body-secondary">2-4 giocatori, 15 min</small>
@@ -170,6 +172,7 @@
                             <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
                             <div class="d-flex justify-content-between align-items-center">
                                 <div class="btn-group">
+                                    <button type="button" class="btn btn-sm btn-outline-secondary">Gioca</button>
                                     <button type="button" class="btn btn-sm btn-outline-secondary">Regole</button>
                                 </div>
                                 <small class="text-body-secondary">9 mins</small>
@@ -185,6 +188,7 @@
                             <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
                             <div class="d-flex justify-content-between align-items-center">
                                 <div class="btn-group">
+                                    <button type="button" class="btn btn-sm btn-outline-secondary">Gioca</button>
                                     <button type="button" class="btn btn-sm btn-outline-secondary">Regole</button>
                                 </div>
                                 <small class="text-body-secondary">9 mins</small>
@@ -199,6 +203,7 @@
                             <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
                             <div class="d-flex justify-content-between align-items-center">
                                 <div class="btn-group">
+                                    <button type="button" class="btn btn-sm btn-outline-secondary">Gioca</button>
                                     <button type="button" class="btn btn-sm btn-outline-secondary">Regole</button>
                                 </div>
                                 <small class="text-body-secondary">9 mins</small>
@@ -213,6 +218,7 @@
                             <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
                             <div class="d-flex justify-content-between align-items-center">
                                 <div class="btn-group">
+                                    <button type="button" class="btn btn-sm btn-outline-secondary">Gioca</button>
                                     <button type="button" class="btn btn-sm btn-outline-secondary">Regole</button>
                                 </div>
                                 <small class="text-body-secondary">9 mins</small>
