--- a/JavaScriptCode/Pinella/Home.html
+++ b/JavaScriptCode/Pinella/Home.html
@@ -11,9 +11,9 @@
     <div class="container">
         <div class="tavolo">
             
-            <img src="../immagini/playingCards/PNG-cards-1.3/retro.png" class="img-retro" onclick="draw()"/>
+            <img src="../immagini/playingCards/PNG-cards-1.3/retro.png" class="img-retro" onclick="pesca()"/>
             
-            <div class="Mazzo"></div>
+            <div class="mazzo"></div>
         </div>
     </div>
     <script src="pinella.js"></script>
