ora si possono creare n mazzi con setupMazzo

--- a/JavaScriptCode/Pinella/Home.html
+++ b/JavaScriptCode/Pinella/Home.html
@@ -7,7 +7,7 @@
     <title>Gioco</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body onload="setupMazzo()">
+<body onload="setupMazzo(2)">
     <div class="container">
         <div class="tavolo">
             
