--- a/JavaScriptCode/Pinella/Home.html
+++ b/JavaScriptCode/Pinella/Home.html
@@ -11,7 +11,7 @@
     <div class="container">
         <div class="tavolo">
             
-            <img src="../immagini/PNG-cards-1.3/retro.png" class="img-retro" onclick="pesca()"/>
+            <img src="../immagini/PNG-cards-1.3/retro.png" class="img-retro" onclick="pesca()" alt="..."/>
             
             <div class="mazzo"></div>
         </div>
