--- a/JavaScriptCode/Pinella/Home.html
+++ b/JavaScriptCode/Pinella/Home.html
@@ -7,16 +7,17 @@
     <title>Gioco</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body onload="setupMazzo(2)">
+<body onload="setupMazzo()">
     <div class="container">
         <div class="tavolo">
             
             <img src="../immagini/PNG-cards-1.3/retro.png" class="img-retro" onclick="pesca()" alt="..."/>
             
-            <div class="mazzo"></div>
+            <div class="mazzoPinella"></div>
         </div>
     </div>
     <script src="pinella.js"></script>
     <script src="../playingCards/carte.js"></script>
+    <script src="../playingCards/deck.js"></script>
 </body>
 </html>
