Update folder js

--- a/JavaScriptCode/Pinella/Home.html
+++ b/JavaScriptCode/Pinella/Home.html
@@ -16,8 +16,8 @@
             <div class="mazzoPinella"></div>
         </div>
     </div>
-    <script src="pinella.js"></script>
-    <script src="../playingCards/carte.js"></script>
-    <script src="../playingCards/deck.js"></script>
+    <script src="js/pinella.js"></script>
+    <script src="js/carte.js"></script>
+    <script src="js/deck.js"></script>
 </body>
 </html>
