--- a/JavaScriptCode/Pinella/Home.html
+++ b/JavaScriptCode/Pinella/Home.html
@@ -14,10 +14,12 @@
             <img src="../immagini/PNG-cards-1.3/retro.png" class="img-retro" onclick="pesca()" alt="..."/>
             
             <div class="mazzoPinella"></div>
+            <div class="giocatore"></div>
         </div>
     </div>
     <script src="js/pinella.js"></script>
     <script src="js/carte.js"></script>
     <script src="js/deck.js"></script>
+    <script src="js/giocatore.js"></script>
 </body>
 </html>
