--- a/JavaScriptCode/Pinella/Home.html
+++ b/JavaScriptCode/Pinella/Home.html
@@ -11,10 +11,12 @@
     <div class="container">
         <div class="tavolo">
             
-            <img src="../immagini/PNG-cards-1.3/retro.png" class="img-retro" onclick="pesca()" alt="..."/>
             
-            <div class="mazzoPinella"></div>
-            <div class="giocatore"></div>
+            <div class="scarto">
+                <img src="../immagini/PNG-cards-1.3/retro.png" class="img-retro" onclick="pesca()" alt="..."/>
+
+            </div>
+            <div class="giocatore mazzoPinella"></div>
         </div>
     </div>
     <script src="js/pinella.js"></script>
