--- a/JavaScriptCode/Pinella/Home.html
+++ b/JavaScriptCode/Pinella/Home.html
@@ -10,11 +10,12 @@
 <body onload="setupMazzo()">
     <div class="container">
         <div class="tavolo">
-            
-            
+            <button type="button" onclick="distribuisci();nascondiBottone(this)">Inzia</button>
+            <script>function nascondiBottone(x)
+                {x.style.display = 'none';}
+            </script>
             <div class="scarto">
-                <img src="../immagini/PNG-cards-1.3/retro.png" class="img-retro" onclick="pesca()" alt="..."/>
-
+                <img src="../immagini/PNG-cards-1.3/retro.png" class="img-retro" onclick="pescaMazzo()" alt="..."/>
             </div>
             <div class="giocatore mazzoPinella"></div>
         </div>
