--- a/JavaScriptCode/Pinella/Home.html
+++ b/JavaScriptCode/Pinella/Home.html
@@ -14,10 +14,10 @@
             <script>function nascondiBottone(x)
                 {x.style.display = 'none';}
             </script>
-            <div class="scarto">
+            <div class="mazzo">
                 <img src="../immagini/PNG-cards-1.3/retro.png" class="img-retro" onclick="pescaMazzo()" alt="..."/>
             </div>
-            <div class="giocatore mazzoPinella"></div>
+            <div class="giocatore"></div>
         </div>
     </div>
     <script src="js/pinella.js"></script>
