--- a/JavaScriptCode/Pinella/Home.html
+++ b/JavaScriptCode/Pinella/Home.html
@@ -7,13 +7,9 @@
     <title>Gioco</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body onload="setupMazzo()">
+<body onload="setupMazzo() ; distribuisci()">
     <div class="container">
         <div class="tavolo">
-            <button type="button" onclick="distribuisci();nascondiBottone(this)">Inzia</button>
-            <script>function nascondiBottone(x)
-                {x.style.display = 'none';}
-            </script>
             <div class="mazzo">
                 <img src="../immagini/PNG-cards-1.3/retro.png" class="img-retro" onclick="pescaMazzo()" alt="..."/>
             </div>
