--- a/JavaScriptCode/Pinella/Home.html
+++ b/JavaScriptCode/Pinella/Home.html
@@ -11,14 +11,16 @@
     <div class="container">
         <div class="tavolo">
             <div class="mazzo">
-                <img src="../immagini/PNG-cards-1.3/retro.png" class="img-retro" onclick="pescaMazzo()" alt="..."/>
+                <img src="../immagini/PNG-cards-1.3/retro.png" class="img-retro" onclick="pescaMazzo()"/>
             </div>
             <div class="giocatore"></div>
+            <div class="scarto"></div>
         </div>
     </div>
     <script src="js/pinella.js"></script>
     <script src="js/carte.js"></script>
     <script src="js/deck.js"></script>
     <script src="js/giocatore.js"></script>
+    <script src="js/connessione.js" type="module"></script>
 </body>
 </html>
