miglioramento dello scarto

--- a/JavaScriptCode/Pinella/Home.html
+++ b/JavaScriptCode/Pinella/Home.html
@@ -13,7 +13,7 @@
             <div class="util1"ondrop="scarto(event)" ondragover="allowDrop(event)">
                 <div class="mazzo">
                     <!--in pescaMazzo al posto di giocatore[0] bisognerà scegliere dinamicamente il giocatore che deve pescare-->
-                    <img src="../immagini/PNG-cards-1.3/retro.png" class="img-retro" onclick="pescaMazzo(giocatori[0])"/>
+                    <img src="../immagini/PNG-cards-1.3/retro.png" class="img-retro" onclick="pescaMazzo()"/>
                 </div>
                 <div class="scarto"></div>
             </div>
