--- a/JavaScriptCode/Pinella/Users.html
+++ b/JavaScriptCode/Pinella/Users.html
@@ -19,7 +19,9 @@
             <br/>
             <div class="host box">
                 <label>Inserisci il nome:</label><br/>
-                <input type="text" placeholder="Inserisci il tuo nome"/><br />
+                <input type="text" placeholder="Inserisci il tuo nome" id="nome"/><br />
+                <button onclick="createGame()">Genera codice stanza</button><br />
+                <input type="text" id="idStanza" readonly/>
             </div>
             <div class="connection box">
                 <label>Inserisci il nome:</label><br/>
@@ -27,12 +29,16 @@
                 <label>Inserisci il codice della stanza:</label><br/>
                 <input type="text" placeholder="Inserisci il codice della stanza"/><br/>
             </div>
-            <button><a href="Home.html">Invia</a></button>
+            <button><a href="Home.html">Inizia</a></button>
         </div>    
     </div>
+    <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-auth.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-database.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-    <script type="module">
+    <script src="js/connessione.js" type="module"></script>
+        <script type="module">
         $(document).ready(function(){
             $('.connection').hide();
             $('input[type="radio"]').click(function(){
@@ -43,5 +49,6 @@
         });
     });
     </script>
+
 </body>
 </html>
