--- a/JavaScriptCode/Pinella/Users.html
+++ b/JavaScriptCode/Pinella/Users.html
@@ -37,8 +37,8 @@
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-database.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-    <script src="js/connessione.js" type="module"></script>
-        <script type="module">
+    <script src="js/connessione.js"></script>
+    <script type="module">
         $(document).ready(function(){
             $('.connection').hide();
             $('input[type="radio"]').click(function(){
@@ -49,6 +49,5 @@
         });
     });
     </script>
-
 </body>
 </html>
