--- a/JavaScriptCode/Pinella/Users.html
+++ b/JavaScriptCode/Pinella/Users.html
@@ -11,11 +11,20 @@
 <body>
     <div class="container">
         <div class="form">
-            <label>Crea stanza</label>
-            <input type ="radio"name="host"value="host"class="campi host" checked="yes"/>
-            <label> Accedi alla stanza</label>
-            <input type ="radio"name ="host" value="connection" class="campi stanza"/>
-            <br/>
+            <h1>STANZA</h1>
+            
+            <div class="opzioni">
+                <div>
+                    <label>
+                        <input type ="radio"name="host"value="host"class="campi host" checked="yes"/>
+                        <span>Crea una stanza</span>
+                    </label>
+                    <label>
+                        <input type ="radio"name ="host" value="connection" class="campi stanza"/>
+                        <span>Collegati a una stanza</span>
+                    </label>
+                </div>
+            </div>
             <br/>
             <div class="host box">
                 <label>Inserisci il nome:</label><br/>
