update form css
Co-Authored-By: Bertez03 <117892809+Bertez03@users.noreply.github.com>

--- a/JavaScriptCode/Pinella/Users.html
+++ b/JavaScriptCode/Pinella/Users.html
@@ -12,7 +12,6 @@
     <div class="container">
         <div class="form">
             <h1>STANZA</h1>
-            
             <div class="opzioni">
                 <div>
                     <label>
@@ -27,17 +26,17 @@
             </div>
             <br/>
             <div class="host box">
-                <label>Inserisci il nome:</label><br/>
-                <input type="text" placeholder="Inserisci il tuo nome" id="nomeHost"/><br />
-                <button onclick="createGame()">Genera codice stanza</button><br />
+                <label class="label-host">Inserisci il nome :</label>
+                <input type="text" placeholder="Inserisci il tuo nome" id="nomeHost"/>
+                <button onclick="createGame()">Genera codice stanza</button>
                 <input type="text" id="idStanza" readonly/>
             </div>
             <div class="connection box">
-                <label>Inserisci il nome:</label><br/>
-                <input type="text" placeholder="Inserisci il tuo nome" id="nomeConn"/><br/>
-                <label>Inserisci il codice della stanza:</label><br/>
-                <input type="text" placeholder="Inserisci il codice della stanza" id="gameId"/><br/>
-                <button onclick="joinGame()">Collegati a una stanza</button><br />
+                <label>Inserisci il nome :</label>
+                <input type="text" placeholder="Inserisci il tuo nome" id="nomeConn"/>
+                <label>Inserisci il codice della stanza:</label>
+                <input type="text" placeholder="Inserisci il codice della stanza" id="gameId"/>
+                <button onclick="joinGame()">Collegati a una stanza</button>
             </div>
             <button><a href="Home.html">Inizia</a></button>
         </div>    
