--- a/JavaScriptCode/Pinella/Users.html
+++ b/JavaScriptCode/Pinella/Users.html
@@ -36,9 +36,9 @@
             </div>
             <div class="connection box">
                 <label class="label-connect">Inserisci il nome :</label>
-                <input type="text" placeholder="Inserisci il tuo nome" id="nomeConn"/>
-                <label>Inserisci il codice della stanza:</label>
-                <input type="text" placeholder="Inserisci il codice della stanza" id="gameId"/>
+                <input type="text"class="campi" placeholder="Inserisci il tuo nome" id="nomeConn"/>
+                <label class="label-connect1">Inserisci il codice della stanza:</label>
+                <input type="text"class="campi" placeholder="Inserisci il codice della stanza" id="gameId"/>
                 <button onclick="joinGame()">Collegati a una stanza</button>
             </div>
             <div class="btnInvia">
