piccoli aggiustamenti all'interfaccia di login

--- a/JavaScriptCode/Pinella/Users.html
+++ b/JavaScriptCode/Pinella/Users.html
@@ -34,17 +34,17 @@
                     <input class="idOutput" type="text" id="idStanza" readonly/>
                 </div>
                 <div class="btnInvia1">
-                    <a href="Home.html"class="btn-invia1">Inizia</a>
+                    <a href="Home.html"class="btn-invia">Inizia</a>
                 </div>
             </div>
-            <div class="connection box">
+            <div class="connection box" style="display : none">
                 <label class="label-connect">Inserisci il nome :</label>
                 <input type="text"class="campi" placeholder="Inserisci il tuo nome" id="nomeConn"/>
                 <label class="label-connect1">Inserisci il codice della stanza:</label>
                 <input type="text"class="campi" placeholder="Inserisci il codice della stanza" id="gameId"/>
                 <button onclick="joinGame()" class="btn-join">Collegati a una stanza</button>
                 <div class="btnInvia2">
-                    <a href="Home.html"class="btn-invia2">Inizia</a>
+                    <a href="Home.html"class="btn-invia">Inizia</a>
                 </div>
             </div>
             
@@ -58,12 +58,12 @@
     <script src="js/connessione.js"></script>
     <script type="module">
         $(document).ready(function(){
-            $('.connection').hide();
             $('input[type="radio"]').click(function(){
             var inputValue = $(this).attr("value");
             var targetBox = $("." + inputValue);
             $(".box").not(targetBox).hide();
             $(targetBox).show();
+            //cambaindo da host a ospite disconnette dal db
             disconnect();
         });
     });
