aggiunto mazzoScarto a pinella  e alt del Mazzo HTML

--- a/JavaScriptCode/Pinella/Home.html
+++ b/JavaScriptCode/Pinella/Home.html
@@ -10,9 +10,9 @@
 <body onload="setupMazzo() ; caricaGiocatori() ; distribuisci()">
     <div class="container">
         <div class="tavolo">
-            <div class="util1"ondrop="scarto(event)" ondragover="allowDrop(event)">
+            <div class="util1" ondrop="scarto(event)" ondragover="allowDrop(event)">
                 <div class="mazzo">
-                    <img src="../immagini/PNG-cards-1.3/retro.png" class="img-retro" onclick="pescaMazzo()"/>
+                    <img src="../immagini/PNG-cards-1.3/retro.png" class="img-retro" onclick="pescaMazzo()" alt="Mazzo delle carte"/>
                 </div>
                 <div class="scarto"></div>
             </div>
