--- a/JavaScriptCode/Pinella/Home.html
+++ b/JavaScriptCode/Pinella/Home.html
@@ -8,22 +8,23 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body onload="setupMazzo() ; caricaGiocatori() ; distribuisci()">
-    <div class="container">
-        <div class="tavolo">
-            <div class="util1" ondrop="scarto(event)" ondragover="allowDrop(event)">
-                <div class="mazzo">
-                    <img src="../immagini/PNG-cards-1.3/retro.png" class="img-retro" onclick="pescaMazzo()" alt="Mazzo delle carte"/>
-                </div>
-                <div class="scarto" onclick="pescaScarto()"></div>
+<div class="container">
+    <div class="tavolo">
+        <div class="util1" ondrop="scarto(event)" ondragover="allowDrop(event)">
+            <div class="mazzo">
+                <img src="../immagini/PNG-cards-1.3/retro.png" class="img-retro" onclick="pescaMazzo()"
+                     alt="Mazzo delle carte"/>
             </div>
-            
-            <div class="giocatore"></div>
-
+            <div class="scarto" onclick="pescaScarto()"></div>
         </div>
+
+        <div class="giocatore"></div>
+
     </div>
-    <script src="js/pinella.js"></script>
-    <script src="js/carte.js"></script>
-    <script src="js/deck.js"></script>
-    <script src="js/giocatore.js"></script>    
+</div>
+<script src="js/pinella.js"></script>
+<script src="js/carte.js"></script>
+<script src="js/deck.js"></script>
+<script src="js/giocatore.js"></script>
 </body>
 </html>
