fix disconnnessione dal database

--- a/JavaScriptCode/Pinella/Home.html
+++ b/JavaScriptCode/Pinella/Home.html
@@ -7,7 +7,7 @@
     <title>Gioco</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
-<body onload="setupMazzo() ; caricaGiocatori() ; distribuisci()">
+<body onload="allowDisconnection() ; setup()">
 <div class="container">
     <div class="tavolo">
         <div class="util1" ondrop="scarto(event)" ondragover="allowDrop(event)">
@@ -22,6 +22,9 @@
 
     </div>
 </div>
+<script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
+<script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-auth.js"></script>
+<script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-database.js"></script>
 <script src="js/pinella.js"></script>
 <script src="js/carte.js"></script>
 <script src="js/deck.js"></script>
