--- a/JavaScriptCode/Pinella/Users.html
+++ b/JavaScriptCode/Pinella/Users.html
@@ -34,7 +34,7 @@
                 <input class="idOutput" type="text" id="idStanza" readonly/>
             </div>
             <div class="btnInvia1">
-                <a href="Home.html" class="btn-invia">Inizia</a>
+                <a onclick="disableDisconnection()" href="Home.html" class="btn-invia">Inizia</a>
             </div>
         </div>
         <div class="connection box" style="display : none">
@@ -44,7 +44,7 @@
             <input type="text" class="campi" placeholder="Inserisci il codice della stanza" id="gameId"/>
             <button onclick="joinGame()" class="btn-join">Collegati a una stanza</button>
             <div class="btnInvia2">
-                <a href="Home.html" class="btn-invia">Inizia</a>
+                <a onclick="disableDisconnection()" href="Home.html" class="btn-invia">Inizia</a>
             </div>
         </div>
 
@@ -56,7 +56,6 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
 <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
 <script src="js/connessione.js"></script>
-<script src="js/giocatore.js"></script>
 <script type="module">
     $(document).ready(function () {
         $('input[type="radio"]').click(function () {
